// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`screenshots > getBase64FullPageScreenshotsData > should get the Android ChromeDriver fullpage screenshot data 1`] = `
{
  "data": [
    {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1600,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 1600,
      "imageHeight": 800,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 800,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 2400,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots > getBase64FullPageScreenshotsData > should get the desktop browser fullpage screenshot data 1`] = `
{
  "data": [
    {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 1536,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 3072,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 4608,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 6144,
      "imageHeight": 256,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 1280,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 6400,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots > getBase64FullPageScreenshotsData > should hide elements for the Android ChromeDriver fullpage screenshot 1`] = `
{
  "data": [
    {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1600,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 1600,
      "imageHeight": 800,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 800,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 2400,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots > getBase64FullPageScreenshotsData > should hide elements for the desktop browser fullpage screenshot 1`] = `
{
  "data": [
    {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 1536,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 3072,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 4608,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    {
      "canvasWidth": 2732,
      "canvasYPosition": 6144,
      "imageHeight": 256,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 1280,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 6400,
  "fullPageWidth": 2732,
}
`;
